--- a/css/course-details.css
+++ b/css/course-details.css
@@ -10,7 +10,7 @@
 body {
     overflow-x: hidden;
 }
-section, .nav-container, .hero-container {
+section:not(.about), .nav-container, .hero-container {
     max-width: 1400px;
 }
 .navbar {
@@ -345,8 +345,11 @@ section, .nav-container, .hero-container {
     margin-right: 30px;
     color: #fff;
     background-color: #E51F1F;
-    padding: 10px;
+    padding: 4px;
+    text-align: center;
     border-radius: 5px;
+    min-width: 41px;
+    height: 41px;
     z-index: 10;
 }
 .collapsed .expansion__number {
@@ -437,6 +440,7 @@ section, .nav-container, .hero-container {
 
 .about-title {
     font-size: 30px;
+    text-transform: uppercase;
 }
 .about-subtitle {
     font-size: 16px;
@@ -450,12 +454,25 @@ section, .nav-container, .hero-container {
     width: 100%;
     height: 100%;
 }
-
 .border-left {
+    position: relative;
+    padding-left: 32px;
+}
+.border-left::before {
+    content: '';
+    position: absolute;
+    width: 4px;
+    height: 80%;
+    left: 0px;
+    background-color: #E51F1F;
+    border-radius: 25px;
+}
+
+/* .border-left {
     border-left: 4px solid #E51F1F !important;
     padding-left: 10px;
-    /* margin-top: 50px; */
-}
+    margin-top: 50px;
+} */
 
 .bottom {
     display: flex;
@@ -478,6 +495,10 @@ section, .nav-container, .hero-container {
     color: #fff;
     
 }
+.about .rating div {
+    column-gap: 5px;
+    margin-bottom: 5px;
+}
 .about .rating h2 {
     margin: 0;
 }
@@ -488,10 +509,44 @@ section, .nav-container, .hero-container {
 }
 .about-description {
     min-height: 510px;
-    padding: 20px 20px;
+    padding: 20px 5px;
     margin: auto;
     row-gap: 35px;
     /* margin-bottom: 40px; */
+}
+
+.award {
+    width: 169px;
+    height: 76px;
+    justify-content: space-between;
+}
+.award-text {
+    text-align: center;
+    position: absolute;
+    margin-left: 21px;
+    margin-top: 8px;
+}
+.wing {
+    max-width: 44px;
+}
+
+.award-title {
+    font-family: 'Open Sans';
+    font-weight: normal;
+    font-size: 12px;
+    text-transform: uppercase;
+}
+.award-name {
+    font-family: 'Open Sans';
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: uppercase;
+}
+.award-year {
+    font-family: 'Open Sans';
+    font-weight: normal;
+    font-size: 12px;
+    text-transform: uppercase;
 }
 
 
@@ -499,6 +554,13 @@ section, .nav-container, .hero-container {
     .navbar-hero-section {
         background-image: url('../img/course-details-banner-mobile.png');
         background-size: contain;
+    }
+    .nav-hero-container {
+        padding: 0px 15px;
+    }
+    .navbar-hero-section .container {
+        padding-left: 0;
+        padding-right: 0;
     }
     /* .navbar {
         padding: 16px ;
@@ -525,6 +587,9 @@ section, .nav-container, .hero-container {
     }
     .banner__search > input {
         padding-right: 0px;
+    }
+    .banner__right {
+        max-width: 580px;
     }
     /* ============== Course Details Section =============== */
     .courseDetails .container {
@@ -559,10 +624,37 @@ section, .nav-container, .hero-container {
     .about-paragraph {
         text-align: center;
     }
-    .border-left {
-        width: 200px;
-        /* margin: 40px auto; */
+    
+
+    .award {
+        width: 122px;
+        height: 55px;
+        justify-content: space-between;
     }
+    .award h1, h2, h3 {
+        margin-bottom: 3px;
+    }
+    .award-text {
+        margin-left: 18px;
+        margin-top: 8px;
+    }
+    .wing {
+        max-width: 44px;
+    }
+    
+    .award-title {
+        font-size: 8px;
+    }
+    .award-name {
+        font-size: 10px;
+    }
+    .award-year {
+        font-size: 8px;
+    }
+    .border-left {
+        padding-left: 16px;
+    }
+
 }
 
 @media screen and (min-width: 1400px) {
@@ -580,5 +672,11 @@ section, .nav-container, .hero-container {
     }
     .banner__left {
         padding-left: 0;
+    }
+}
+
+@media screen and (max-width:360px) {
+    .banner__left {
+        margin-top: 200px;
     }
 }
