--- a/components/faq.html
+++ b/components/faq.html
@@ -40,10 +40,69 @@
             </div>
           </div>
         </div>
+        <div class="accordion-item mb-2">
+          <h2 class="accordion-header" id="headingFour">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+              Which of the Seven Wonders of the world do you want to visit the most?
+            </button>
+          </h2>
+          <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              At venenatis mi eu id vitae fermentum, lacus, malesuada ultricies.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item mb-2">
+          <h2 class="accordion-header" id="headingFive">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+              Which of the Seven Wonders of the world do you want to visit the most?
+            </button>
+          </h2>
+          <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              At venenatis mi eu id vitae fermentum, lacus, malesuada ultricies.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item mb-2">
+          <h2 class="accordion-header" id="headingSix">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+              Which of the Seven Wonders of the world do you want to visit the most?
+            </button>
+          </h2>
+          <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              At venenatis mi eu id vitae fermentum, lacus, malesuada ultricies.
+            </div>
+          </div>
+        </div>
+        <div class="accordion-item mb-2">
+          <h2 class="accordion-header" id="headingSeven">
+            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+              Which of the Seven Wonders of the world do you want to visit the most?
+            </button>
+          </h2>
+          <div id="collapseSeven" class="accordion-collapse collapse" aria-labelledby="headingSeven" data-bs-parent="#accordionExample">
+            <div class="accordion-body">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+              At venenatis mi eu id vitae fermentum, lacus, malesuada ultricies.
+            </div>
+          </div>
+        </div>
     </div>
-    <button type="button" class="view-more btn btn-primary">View More
-      <span class="right-arrow"><img src="img/right-arrow.svg" alt="arrow"></span>
+    <button type="button" class="view-more btn">View More
     </button>
-
-
   </section>
+
+  <script>
+        $(".view-more").on("click", function(){
+          console.log("aaaa")
+            $(".accordion-item:hidden").slideDown()
+            if ($(".accordion-item:hidden").length == 0) {
+                $(".view-more").fadeOut('slow')
+            }
+        })
+  </script>
