--- a/css/course-details.css
+++ b/css/course-details.css
@@ -98,8 +98,6 @@ section:not(.about), .nav-container, .hero-container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    /* margin: 10px auto; */
-    /* justify-content: flex-start; */
     text-decoration: none;
     color: #fff;
     row-gap: 10px;
@@ -110,7 +108,6 @@ section:not(.about), .nav-container, .hero-container {
     background-color: #fff;
     border-radius: 10px;
     color: #343434;
-    /* width: 80%; */
     max-width: 377px;
     margin: 30px auto;
     box-shadow: 0px 16px 40px rgba(193, 122, 122, 0.1);
@@ -196,7 +193,6 @@ section:not(.about), .nav-container, .hero-container {
 }
 
 .banner__right > ul {
-    /* color: #555; */
     display: flex;
     flex-direction: column;
     row-gap: 16px;
@@ -378,9 +374,12 @@ section:not(.about), .nav-container, .hero-container {
     border: none;
     box-shadow: 0px 8px 16px rgba(112, 144, 176, 0.1);
     border-radius: 16px;
+    margin-top: 4px;
 }
 .courseDetails .card-header {
     border: none;
+    box-shadow: 0px 8px 16px rgba(112, 144, 176, 0.1);
+    border-radius: 16px;
 }
 .courseDetails .card-body {
     font-family: 'Open Sans';
@@ -394,7 +393,7 @@ section:not(.about), .nav-container, .hero-container {
     background-color: #fff;
     padding: 15px;
     border-radius: 8px;
-    margin: 40px 40px 16px 40px;
+    margin: 16px 40px 16px 40px;
 }
 
 .collapse-single-row:not(:last-of-type) {
@@ -429,6 +428,33 @@ section:not(.about), .nav-container, .hero-container {
 .collapse-single-row > div > p:last-of-type {
     color: #555;
 }
+/* #body .accordion-header {
+    position: relative;
+} */
+.courseDetails .accordion-button {
+    padding-bottom: 0;
+    padding-top: 0;
+}
+.courseDetails .accordion-button:not(.collapsed) {
+    box-shadow: none;
+}
+.courseDetails .collapsed {
+    color: #343434;
+}
+/* #body .accordion-header:not(.collapsed)::after{
+    background-image: url('../img/red-up.svg') !important;
+    transform: rotate(0deg) !important;
+} */
+/* #body .accordion-header::after {
+    background-image: url('../img/down.svg') !important;
+    z-index: 1000;
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100px;
+    background-color: #E51F1F;
+    height: 100px;
+} */
 
 /* ==================== About Section ================== */
 .about {
@@ -547,6 +573,11 @@ section:not(.about), .nav-container, .hero-container {
     font-weight: normal;
     font-size: 12px;
     text-transform: uppercase;
+}
+
+/* ================ faq ======================== */
+.faq-section .accordion-item:nth-child(n+6) {
+    display: none;
 }
 
 
