--- a/css/main.css
+++ b/css/main.css
@@ -164,15 +164,28 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     margin: 100px auto;
 }
 .featured-vid-wrapper {
-    width: 550px;
-    height: 350px;
+    max-width: 550px;
+    max-height: 100%;
     margin: auto;
     justify-content: center;
     align-items: center;
 }
+
 .featured-vid-wrapper img{
     width: 100%;
     height: 100%;
+}
+.featured-vid-wrapper .modal-dialog{
+    max-width: 75%;
+    height: 100%;
+    margin: auto;
+}
+.featured-vid-wrapper .modal-content {
+    border: none;
+    background: none;
+}
+.trailer-video {
+    border-radius: 16px;
 }
 .featured-wrapper {
     color: #343434;
@@ -348,8 +361,10 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
 /* ============== Browse Courses =============== */
 .browse-section {
     height: 100%;
-    /* margin: 100px 0px; */
     margin-top: 160px;
+    background-color: #F3F7FF;
+    padding-top: 50px;
+    padding-bottom: 50px;
 }
 
 .browse-container {
@@ -385,17 +400,11 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     margin-top: 29px;
     display: flex;
     flex-direction: row;
-    /* flex-wrap: wrap; */
     overflow-x: scroll;
-    /* overflow-y: visible; */
-    /* touch-action: pan-x; */
     list-style: none;
     column-gap: 40px;
-    /* row-gap: 16px; */
     justify-content: flex-start;
     align-items: center;
-    /* padding-left: 0; */
-    /* margin: auto; */
     padding: 0 20px;
     width: 100%;
     height: 60px;
@@ -405,6 +414,10 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
 }
 .category-item {
     width: 100%;
+}
+.category-item button {
+    border: none;
+    background: none;
 }
 .category-link {
     font-family: 'Neue Helvetica';
@@ -420,7 +433,7 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     color: #343434;
 }
 .category-item .active {
-    background: #343434;
+    background: #343434 !important;
     color: #fff;
     padding: 10px 16px;
     border-radius: 32px;
@@ -444,14 +457,31 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     width: 240px;
     height: 100%;
 }
-
 .course-card {
     min-width: 100%;
     min-height: 100%;
     border-radius: 16px;
     cursor: pointer;
     transition: transform ease-in .3s;
+    position: relative;
+    overflow:hidden;
 }
+.course-card::before {
+    position: absolute;
+    content: "Popular";
+    width: 75px;
+    height: 29px;
+    top: 16px;
+    left: 16px;
+    padding: 6px 0px;
+    text-align:center;
+    background: rgba(0, 0, 0, 0.3);
+    border-radius: 64px;
+    font-family: "Neue Helvetica";
+    font-size: 14px;
+    text-transform: uppercase;
+}
+
 .course-cards-wrapper .course-card:hover {
     transform: scale(1.1);
     transition: ease-in .3s;
@@ -471,12 +501,21 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     justify-content: flex-end;
     background: linear-gradient(180deg, rgba(0, 0, 0, 0) 67.42%, #000000 100%);
     border-radius: 16px;
+    transform: translateY(140px);
+    /* z-index: -10; */
+    transition: transform ease-in .3s;
+}
+.course-card .card-img-overlay:hover {
+    transform: translateY(0px);
+    transition: transform ease-in .3s;
+    /* z-index: -10; */
+    /* transition: all ease-in .8s; */
 }
 .course-card .card-title {
     font-family: 'Neue Helvetica';
     font-style: normal;
     font-weight: 800;
-    font-size: 24px;
+    font-size: 22px;
     line-height: 132%;
     position: relative;
 
@@ -500,6 +539,53 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     margin-bottom: 32px;
     margin-top: 16px;
 }
+
+.browse-card-button-container {
+    width: 100%;
+    
+    /* display: none; */
+}
+/* .course-cards-wrapper .course-card:hover .browse-card-button-container{
+    transform: translateY(0px);
+    display: flex;
+} */
+.browse-trailer {
+    font-family: 'Neue Helvetica';
+    font-style: normal;
+    font-size: 14px;
+    font-weight: 700;
+    background-color: #E51F1F;
+    border: none;
+    margin-top: 13px;
+    width: 100%;
+    height: 48px;
+    border-radius: 8px;
+    letter-spacing: 0.02em;
+}
+.browse-trailer:hover {
+    background-color: #E51F1F;
+    opacity: .9;
+}
+
+.browse-get-started {
+    font-family: 'Neue Helvetica';
+    font-style: normal;
+    font-size: 14px;
+    font-weight: 700;
+    background-color: #535353;
+    border: none;
+    width: 100%;
+    height: 48px;
+    border-radius: 8px;
+    letter-spacing: 0.02em;
+}
+.browse-get-started:hover {
+    background-color: #535353;
+    opacity: .9;
+}
+
+
+
 .view-more {
     font-family: 'Neue Helvetica';
     font-style: normal;
@@ -512,11 +598,25 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     width: 187px;
     height: 56px;
     border-radius: 8px;
+    color: #fff;
+    box-shadow: none;
 }
 .view-more:hover {
     background-color: #E51F1F;
-    opacity: .7;
+    opacity: .9;
+    color: #fff;
 }
+.view-more:focus {
+    background-color: #E51F1F;
+    color: #fff;
+    outline: none;
+    border: none;
+}
+/* @media (hover: hover) {
+    :hover {
+      background: yellow;
+    }
+  } */
 
 
 /* ============= FAQ ==================== */
@@ -597,6 +697,9 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
 #body .accordion-button::after {
     background-image: url('../img/down.svg') !important;
 }
+.accordion-button:not(.collapsed) {
+    box-shadow: none;
+}
 /* ============ Testimonials Section ============= */
 .testimonials-section {
     width: 100%;
@@ -646,13 +749,7 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     border-radius: 16px;
     filter: drop-shadow(0px 40px 48px rgba(193, 122, 122, 0.2));
 }
-/* .testimonials-section .carousel-img img {
-    width: 100%;
-    height: 100%;
-    border-radius: 16px;
-    filter: drop-shadow(0px 40px 48px rgba(193, 122, 122, 0.2));
-    z-index: 10; 
-} */
+
 .testimonials-section .card {
     height: 443px;
     background: #F9F9F9;
@@ -758,13 +855,28 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
 .update-email {
     width: 100%;
     height: 50px;
-    padding-left: 30%;
     color: #8E8C94;
     font-family: 'Neue Helvetica';
     font-style: normal;
     font-weight: bold;
-    font-size: 16px;
+    font-size: 20px;
+    text-align: center;
 }
+::-webkit-input-placeholder {
+    text-align: center;
+ }
+ 
+ :-moz-placeholder { /* Firefox 18- */
+    text-align: center;  
+ }
+ 
+ ::-moz-placeholder {  /* Firefox 19+ */
+    text-align: center;  
+ }
+ 
+ :-ms-input-placeholder {  
+    text-align: center; 
+ }
 .sign-up-btn {
     width: 100%;
     height: 48px;
@@ -958,6 +1070,12 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     .org-title {
         font-size: 1.2rem;
     }
+    /* ============ Featured Courses ============= */
+    .featured-vid-wrapper .modal-dialog{
+        max-width: 90%;
+        height: 100%;
+        margin: auto;
+    }
     /* ============ What to expect ============= */
     
     .expect-wrapper {
@@ -1050,9 +1168,9 @@ section:not(.about, .featured-section, .testimonials-section), .nav-container, .
     .accordion-button {
         font-size: 16px;
     }
-    .accordion-button:focus {
+    /* .accordion-button:focus {
         color: #E51F1F;
-    }
+    } */
     .accordion-body {
         font-size: 14px;
     }
