--- a/components/faq.html
+++ b/components/faq.html
@@ -1,7 +1,7 @@
 <section class="faq-section">
     <h2 class="faq-title">Frequently asked questions</h2>
     <div class="accordion" id="accordionExample">
-        <div class="accordion-item mb-2">
+        <div class="accordion-item border-0 mb-2">
           <h2 class="accordion-header" id="headingOne">
             <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
               What is class
@@ -14,7 +14,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mb-2">
+        <div class="accordion-item border-0 mb-2">
           <h2 class="accordion-header" id="headingTwo">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
               What did say as a kid when asked: What do you want to be when you grow up?
@@ -27,7 +27,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mb-2">
+        <div class="accordion-item border-0 mb-2">
           <h2 class="accordion-header" id="headingThree">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
               Which of the Seven Wonders of the world do you want to visit the most?
@@ -40,7 +40,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mb-2">
+        <div class="accordion-item border-0 mb-2">
           <h2 class="accordion-header" id="headingFour">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
               Which of the Seven Wonders of the world do you want to visit the most?
@@ -53,7 +53,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mb-2">
+        <div class="accordion-item border-0 mb-2">
           <h2 class="accordion-header" id="headingFive">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
               Which of the Seven Wonders of the world do you want to visit the most?
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mb-2">
+        <div class="accordion-item border-0 mb-2">
           <h2 class="accordion-header" id="headingSix">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
               Which of the Seven Wonders of the world do you want to visit the most?
@@ -79,7 +79,7 @@
             </div>
           </div>
         </div>
-        <div class="accordion-item mb-2">
+        <div class="accordion-item border-0 mb-2">
           <h2 class="accordion-header" id="headingSeven">
             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
               Which of the Seven Wonders of the world do you want to visit the most?
