--- a/css/activity-page.css
+++ b/css/activity-page.css
@@ -5,7 +5,26 @@
     margin: 0;
     padding: 0;
 }
-
+body {
+  overflow-x: hidden;
+}
+h4 {
+  font-family: 'Neue Helvetica';
+  font-style: normal;
+  font-weight: bold;
+  font-size: 24px;
+  color: #343434;
+}
+h6 {
+  font-family: 'Neue Helvetica';
+  font-weight: 700;
+  font-size: 24px;
+  color: #343434;
+}
+p {
+  font-family: 'Open Sans';
+  color: #535353;
+}
 .course-header {
   height: 80px;
 }
@@ -26,20 +45,162 @@
 
 /* ======================= Activity Section =========================== */
 .activity-section {
-  height: 1400px;
+  height: 100%;
   background-color: #F3F3F3;
+  /* padding-top: 40px; */
+}
+.activity-container{
+  max-width: 1008px;
+  height: 100%;
+  box-shadow: 0px 8px 16px rgba(112, 144, 176, 0.1);
+  background: none;
+}
+.activity-container > .row {
+  border-radius: 16px;
+  overflow: hidden;
 }
 .activity-left {
   /* max-width: 1008px; */
   width: 100%;
-  height: 331px;
-  background-color: blue;
+  min-height: 1400px;
+  height: 100%;
+  /* background-color: #fff; */
+  transition: max-width ease-in-out .5s;
+  /* border-radius: 16px; */
+}
+.activity-number, .form-check-label {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 18px;
+  color: #77757F;
+}
+.form-check-label {
+  /* font-family: 'Open-sans'; */
+  color: #535353;
+}
+.form-check-input {
+  min-width: 40px;
+  height: 25px;
+  background-color: #E8E8EA;
+  /* background-image: url(data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e); */
+  background-image: url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'><circle r='3' fill='%23fff'/></svg>") !important;
+  background-size: 25px 65px;
+  /* box-shadow: rgba(0, 0, 0, 0.2); */
+  /* z-index: 1000; */
+  border: none;
+}
+.form-check-input:checked {
+  background-color: #8EE3BA;
+}
+.form-check-input:focus {
+  border: none;
+  outline: 0;
+  box-shadow: none;
 }
 .activity-right {
-  width: 500px;
+  max-width: 50%;
   height: 1331px;
   background-color: red;
   display: none;
+  position: absolute;
+  right: 0;
+}
+.activity-video-container {
+  max-height: 617px;
+}
+.activity-video {
+  border-radius: 16px;
+  min-width: 100% !important;
+  /* height: 100% !important; */
+  object-fit: fill;
+  border: none;
+}
+
+.activity-tabs .tab-link {
+  color: #343434 !important;
+  font-family: 'Neue Helvetica';
+  font-weight: 450 !important;
+  font-size: 16px;
+  letter-spacing: 0.03em !important;
+  border: none !important;
+}
+.activity-tabs .nav-item .active {
+  color: #E51F1F !important;
+  border-bottom: 2px #E51F1F solid !important;
+}
+
+.nav-tabs {
+  width: 100% !important;
+}
+.nav-link {
+  padding: 0.5rem 0.5rem;
+}
+/* ============= Tabs Container =================  */
+.overview-title, .resources-title, .resource-title {
+  /* font-family: 'Open Sans'; */
+  font-size: 18px;
+  font-weight: 700;
+}
+.overview-paragraph {
+  /* font-family: 'Open Sans'; */
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.comment-wrapper, .reply-input-wrapper {
+  background-color: #F9F9F9;
+  border-radius: 8px;
+  height: 100%;
+}
+.post-btn, .reply-btn {
+  width: 96px;
+  height: 40px;
+}
+.comment-area, .reply-area {
+  font-family: 'Open Sans';
+  font-size: 14px;
+  color: #535353;
+  outline: 0;
+  height: 20px;
+  resize: none;
+}
+.question-container {
+  font-family: 'Open Sans';
+  font-size: 18px;
+  color: #535353;
+}
+.question-number {
+  background-color: #535353;
+  border-radius: 6px;
+}
+.question-title {
+  color: #343434;
+}
+.reply-buttons, .question-buttons {
+  color: #535353;
+}
+.questions-wrapper i:hover {
+  color: #E51F1F;
+}
+.reply-container .reply-picture {
+  min-width: 28px;
+  max-width: 28px;
+  max-height: 28px;
+}
+.reply-wrapper {
+  max-width: 100%;
+}
+.replies-container {
+  display: none;
+}
+
+.resource-description {
+  max-width: 80%;
+}
+
+/* ======================= Share pictures =========================== */
+.share-pictures-wrapper {
+  border: 1px dashed #535353;
+  border-radius: 16px;
 }
 
 @media screen and (max-width: 992px) {
@@ -54,5 +215,26 @@
   }
   .course-title {
     font-size: 14px;
+  }
+  .activity-container > .row {
+    border-radius: 0;
+    overflow: hidden;
+  }
+  .activity-left {
+    max-width: 100% !important;
+    /* transition: none; */
+  }
+  .activity-right {
+    max-width: 100%;
+    position: relative;
+  }
+  .activity-tabs .tab-link {
+    font-size: 12px;
+  }
+  .reply-wrapper {
+    max-width: 80%;
+  }
+  .resource-description {
+    max-width: 95%;
   }
 }
